k8s/manifests/jenkins-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/name: jenkins
  ports:
  - port: 8080
    targetPort: 8080
