k8s/manifests/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  selector:
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/name: jenkins
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
